src/objects/Contact_Us__c.object
<CustomObject><fields>
        <fullName>Contact_Detail__c</fullName>
        <label>Contact Detail</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Contact_Us_Sequence__c</fullName>
        <label>Contact Us Sequence</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields><fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>IsActive</label>
        <type>Checkbox</type>
    </fields><allowInChatterGroups>true</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>false</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>Read</externalSharingModel><label>Contact Us</label><nameField>
        <label>ContactHeader</label>
        <type>Text</type>
    </nameField><pluralLabel>Contact Us</pluralLabel><sharingModel>ReadWrite</sharingModel><visibility>Public</visibility><listViews>
        <fullName>All_Contact_Us_information</fullName>
        <columns>NAME</columns>
        <columns>Contact_Detail__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Contact_Us_Sequence__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Contact Us information</label>
    </listViews></CustomObject>